SERVER-89571: Fix usage of shouldStopCurrentRound (#21510)

(cherry picked from commit 74c276e8a0222698870a5e560a5685049cd8f5ce)

GitOrigin-RevId: 7e196c441f5cd02029d0bd44d9cf8ad92a7af377