src/mongo/s/write_ops/bulk_write_exec_test.cpp
@@ -4176,7 +4176,6 @@ TEST_F(BulkWriteOpWithoutShardKeyWithIdTest, FirstShardFindMatchAndWCError) {
     // Since we got an n=1 reply we are done.
     op.finishExecutingWriteWithoutShardKeyWithId();
     ASSERT(op.isFinished());
-    ASSERT(op.shouldStopCurrentRound());
     ASSERT_EQ(updateOp.getWriteState(), WriteOpState_Completed);
 
     auto replies = op.generateReplyInfo();
@@ -4488,7 +4487,6 @@ TEST_F(BulkWriteOpWithoutShardKeyWithIdTest, NoMatchAndRetryableErrorAndWCError)
     // Since we got an n=1 reply we are done.
     op.finishExecutingWriteWithoutShardKeyWithId();
     ASSERT(op.isFinished());
-    ASSERT(op.shouldStopCurrentRound());
     ASSERT_EQ(updateOp.getWriteState(), WriteOpState_Completed);
 
     auto replies = op.generateReplyInfo();
